--- a/templates/add_rms.html
+++ b/templates/add_rms.html
@@ -135,7 +135,7 @@
                 <label for="broker">Broker:</label>
                 <select id="broker" name="broker">
                     {% for broker in brokers %}
-                        <option value="{{ broker.brokerid }}">{{ broker.broker_id }}</option>
+                        <option value="{{ broker.broker_id }}">{{ broker.broker_id }}</option>
                     {% endfor %}
                 </select><br><br>
             {% endif %}
