--- a/templates/sales_analysis.html
+++ b/templates/sales_analysis.html
@@ -21,7 +21,7 @@
         .sidebar {
             margin: 0;
             padding: 0;
-            width: 150px;
+            width: 200px;
             background-color: lightwhite;
             position: fixed;
             height: 90%;
@@ -305,83 +305,190 @@
                 </div>
             </div>
         </nav>
+        <style>
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #f9f9f9;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 1;
+            }
+        
+            .dropdown-content div {
+                padding: 12px 16px;
+            }
+        
+            .dropdown-content div:hover {
+                background-color: #f1f1f1;
+            }
+            
+        </style>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var dropdowns = document.querySelectorAll('.dropdown');
+                dropdowns.forEach(function(dropdown) {
+                    var toggle = dropdown.querySelector('.filter-option');
+                    var menu = dropdown.querySelector('.dropdown-content');
+        
+                    toggle.addEventListener('click', function(event) {
+                        event.preventDefault();
+                        menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+                    });
+        
+                    document.addEventListener('click', function(event) {
+                        if (!dropdown.contains(event.target)) {
+                            menu.style.display = 'none';
+                        }
+                    });
+                });
+            });
+        </script>
         <div class="sidebar">
+            <div class="sidebar-item">
+                <div class="center-container">
+                    <button class="btn btn-light" class="align:center" onclick="redirectsales_tableURL()">Sales Table</button>
+                </div>
+                <script>
+                    function redirectsales_tableURL() {
+                        window.location.href = '/sales-leads/';
+                    }
+                </script>
+            </div>
             <form id="filter-form">
                 {% csrf_token %}
                 <div class="filter-options">
-                    <a href="#" class="filter-option" data-filter="source_type">Source Type
-                        <div>
-                            <input type="checkbox" id="WebinarCheckbox" name="Source Type" data-field="source_type" class="filter-checkbox" value="Webinar" checked>
-                            <label for="WebinarCheckbox">Webinar</label>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                            <a href="#" class="filter-option" data-filter="source_type" id="dropdownToggle">Source Type</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="WebinarCheckbox" name="Source Type" data-field="source_type" class="filter-checkbox" value="Webinar" checked>
+                                    <label for="WebinarCheckbox">Webinar</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="BranchCheckbox" name="Source Type" data-field="source_type" class="filter-checkbox" value="Branch" checked>
+                                    <label for="BranchCheckbox">Branch</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="CPAPCheckbox" name="Source Type" data-field="source_type" class="filter-checkbox" value="CP/AP" checked>
+                                    <label for="CPAPCheckbox">CP/AP</label>
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <input type="checkbox" id="BranchCheckbox" name="Source Type" data-field="source_type" class="filter-checkbox" value="Branch" checked>
-                            <label for="BranchCheckbox">Branch</label>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                        <a href="#" class="filter-option" data-filter="category" id="dropdownToggle">Category</a>
+                        <div id="dropdownMenu" class="dropdown-content">
+                            <div>
+                                <input type="checkbox" id="RetailCheckbox" name="Category" data-field="category" class="filter-checkbox" value="Retail" checked>
+                                <label for="RetailCheckbox">Retail</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="HNICheckbox" name="Category" data-field="category" class="filter-checkbox" value="HNI" checked>
+                                <label for="HNICheckbox">HNI</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="UltraHNICheckbox" name="Category" data-field="category" class="filter-checkbox" value="Ultra HNI" checked>
+                                <label for="UltraHNICheckbox">Ultra HNI</label>
+                            </div>
                         </div>
-                        <div>
-                            <input type="checkbox" id="CPAPCheckbox" name="Source Type" data-field="source_type" class="filter-checkbox" value="CP/AP" checked>
-                            <label for="CPAPCheckbox">CP/AP</label>
                         </div>
-                    </a>
-                    <a href="#" class="filter-option" data-filter="category">Category
-                        <div>
-                            <input type="checkbox" id="RetailCheckbox" name="Category" data-field="category" class="filter-checkbox" value="Retail" checked>
-                            <label for="RetailCheckbox">Retail</label>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                        <a href="#" class="filter-option" data-filter="risk_appetite" id="dropdownToggle">Risk Appetite</a>
+                        <div id="dropdownMenu" class="dropdown-content">    
+                            <div>
+                                <input type="checkbox" id="Low" name="Risk Appetite" data-field="risk_appetite" class="filter-checkbox" value="Low" checked>
+                                <label for="Low">Low</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="Medium" name="Risk Appetite" data-field="risk_appetite" class="filter-checkbox" value="Medium" checked>
+                                <label for="Medium">Medium</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="High" name="Risk Appetite" data-field="risk_appetite" class="filter-checkbox" value="High" checked>
+                                <label for="High">High</label>
+                            </div>
                         </div>
-                        <div>
-                            <input type="checkbox" id="HNICheckbox" name="Category" data-field="category" class="filter-checkbox" value="HNI" checked>
-                            <label for="HNICheckbox">HNI</label>
                         </div>
-                        <div>
-                            <input type="checkbox" id="UltraHNICheckbox" name="Category" data-field="category" class="filter-checkbox" value="Ultra HNI" checked>
-                            <label for="UltraHNICheckbox">Ultra HNI</label>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                        <a href="#" class="filter-option" data-filter="status" id="dropdownToggle">Status</a>
+                        <div id="dropdownMenu" class="dropdown-content">
+                            <div>
+                                <input type="checkbox" id="Converted" name="Status" data-field="status" class="filter-checkbox" value="Converted" checked>
+                                <label for="Converted">Converted</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="Dropped" name="Status" data-field="status" class="filter-checkbox" value="Dropped" checked>
+                                <label for="Dropped">Dropped</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="Follow up" name="Status" data-field="status" class="filter-checkbox" value="Follow up" checked>
+                                <label for="Follow up">Follow up</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="No Answer" name="Status" data-field="status" class="filter-checkbox" value="No Answer" checked>
+                                <label for="No Answer">No Answer</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="Not Interested" name="Status" data-field="status" class="filter-checkbox" value="Not Interested" checked>
+                                <label for="Not Interested">Not Interested</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="In Progress" name="Status" data-field="status" class="filter-checkbox" value="In Progress" checked>
+                                <label for="In Progress">In Progress</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="Not Contacted" name="Status" data-field="status" class="filter-checkbox" value="Not Contacted" checked>
+                                <label for="Not Contacted">Not Contacted</label>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="filter-option" data-filter="risk_appetite">Risk Appetite
-                        <div>
-                            <input type="checkbox" id="Low" name="Risk Appetite" data-field="risk_appetite" class="filter-checkbox" value="Low" checked>
-                            <label for="Low">Low</label>
                         </div>
-                        <div>
-                            <input type="checkbox" id="Medium" name="Risk Appetite" data-field="risk_appetite" class="filter-checkbox" value="Medium" checked>
-                            <label for="Medium">Medium</label>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                        <a href="#" class="filter-option" data-filter="sales_employee_id" id="dropdownToggle">Sales Employee ID</a>
+                        <div id="dropdownMenu" class="dropdown-content">
+                            {% for employee_id, employee_name in unique_sales_employees %}
+                                <div>
+                                    <input type="checkbox" id="employee{{ employee_id }}" name="Sales Employee ID" data-field="sales_employee_id" class="filter-checkbox" value="{{ employee_id }}" checked>
+                                    <label for="employee{{ employee_id }}">{{ employee_name }}</label>
+                                </div>
+                            {% endfor %}
                         </div>
-                        <div>
-                            <input type="checkbox" id="High" name="Risk Appetite" data-field="risk_appetite" class="filter-checkbox" value="High" checked>
-                            <label for="High">High</label>
                         </div>
-                    </a>
-                    <a href="#" class="filter-option" data-filter="status">Status
-                        <div>
-                            <input type="checkbox" id="Converted" name="Status" data-field="status" class="filter-checkbox" value="Converted" checked>
-                            <label for="Converted">Converted</label>
+                    </div>
+                    <div class="dropdown"> 
+                        <div class="sidebar-item"> 
+                        <a href="#" class="filter-option" data-filter="branch_id" id="dropdownToggle">Branch ID</a>
+                        <div id="dropdownMenu" class="dropdown-content">
+                            {% for branch_id, branch_name in unique_branch_ids %}
+                                <div>
+                                    <input type="checkbox" id="branch{{ branch_id }}" name="Branch ID" data-field="branch_id" class="filter-checkbox" value="{{ branch_id }}" checked>
+                                    <label for="branch{{ branch_id }}">{{ branch_name }}</label>
+                                </div>
+                            {% endfor %}
                         </div>
-                        <div>
-                            <input type="checkbox" id="Dropped" name="Status" data-field="status" class="filter-checkbox" value="Dropped" checked>
-                            <label for="Dropped">Dropped</label>
                         </div>
-                        <div>
-                            <input type="checkbox" id="Follow up" name="Status" data-field="status" class="filter-checkbox" value="Follow up" checked>
-                            <label for="Follow up">Follow up</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="No Answer" name="Status" data-field="status" class="filter-checkbox" value="No Answer" checked>
-                            <label for="No Answer">No Answer</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="Not Interested" name="Status" data-field="status" class="filter-checkbox" value="Not Interested" checked>
-                            <label for="Not Interested">Not Interested</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" id="In Progress" name="Status" data-field="status" class="filter-checkbox" value="In Progress" checked>
-                            <label for="In Progress">In Progress</label>
-                        </div>
-                    </a>
-                    <a href="#" class="filter-option" data-filter="employee_id">Employee
-                        <div id="employee-filters">
-                            <!-- Employee checkboxes will be dynamically populated here -->
-                        </div>
-                    </a>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                        <a href="#" class="filter-option" data-filter="broker_name" id="dropdownToggle">Broker Name</a>
+                        <div id="dropdownMenu" class="dropdown-content">
+                            {% for broker_id, broker_name in unique_broker_names %}
+                                <div>
+                                    <input type="checkbox" id="broker{{ broker_id }}" name="Broker Name" data-field="broker_name" class="filter-checkbox" value="{{ broker_name }}" checked>
+                                    <label for="broker{{ broker_id }}">{{ broker_name }}</label>
+                                </div>
+                            {% endfor %}
+                        </div> 
+                    </div>   
+                    </div>           
                 </div>
             </form>
         </div>
@@ -421,7 +528,7 @@
                 </div>
             </div>
         </div>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
