--- a/templates/strategies.html
+++ b/templates/strategies.html
@@ -19,7 +19,7 @@
         .sidebar {
             margin: 0;
             padding: 0;
-            width: 150px;
+            width: 200px;
             background-color: lightwhite;
             position: fixed;
             height: 90%;
@@ -58,7 +58,7 @@
             left: 0;
             width: 100%;
             height: 150px; /* Adjust the height as needed */
-            background-color: #2679c2bf; /* Set the color to blue */
+            {% comment %} background-color: #2679c2bf; /* Set the color to blue */ {% endcomment %}
             border-radius: 0 0 10px 0; /* Match the bottom-right corner of the navbar */
         }
         
@@ -87,11 +87,11 @@
 
           .container {
             width: 100%; /* Adjust the width as needed */
-            max-height: 75vh; /* Use viewport height for a responsive maximum height */
+            max-height: 80vh; /* Use viewport height for a responsive maximum height */
             overflow-x: auto; /* Add horizontal scroll bar if content overflows horizontally */
             overflow-y: auto; /* Add vertical scroll bar if content overflows vertically */
-            margin-top: 1%; /* Add margin at the top for spacing */
-            margin-left: 15%; /* Add margin to the left side */
+            margin-top: 0%; /* Add margin at the top for spacing */
+            margin-left: 13%; /* Add margin to the left side */
             box-sizing: border-box; /* Include padding and border in the element's total width and height */
         }
         
@@ -427,13 +427,10 @@
     
     {% block content %}
     <div>
-        
-        <div class="container">           
-
         <div id="strategies-text" style="text-align: center;" style="display: none;" class="heading-container">
             <h2>Strategies</h2>
         </div>
-        
+        <div class="container">
         <table id="strategies-table" class="table table-hover" class="table-container">
             <!-- Strategies Table Content -->
             <thead>
@@ -630,7 +627,7 @@
         <form id="update-strategies-form" class="btn-submit-strategies-container" method="post">
             {% csrf_token %}
             <input type="hidden" name="updated_data" id="updated-data">
-            <button id="submit-strategies-btn" type="button" onclick="submitStrategiesAndRedirect()" class="btn btn-success">Submit Strategies</button>
+            <button id="submit-strategies-btn" type="button" onclick="submitStrategiesAndRedirect()" class="btn btn-success">Submit</button>
             <script>
                 function submitStrategiesAndRedirect() {
                     submitStrategies();  // Call the submitStrategies function
@@ -744,7 +741,7 @@
             .btn-submit-strategies-container{
                 position: fixed;
                 bottom: 10px;
-                left: 200px;
+                right: 20px;
                 z-index: 999; /* Ensure it's above other content */
             }
             .btn-new-sales-container {
@@ -773,8 +770,8 @@
             }
             .btn-new-strategies-container{
                 position: fixed;
-                bottom: 20px;
-                right: 20px;
+                top: 85px;
+                right: 10px;
                 z-index: 999; /* Ensure it's above other content */
             }
         </style>
