--- a/templates/support.html
+++ b/templates/support.html
@@ -87,11 +87,11 @@
 
           .container {
             width: 100%; /* Adjust the width as needed */
-            max-height: 75vh; /* Use viewport height for a responsive maximum height */
+            max-height: 80vh; /* Use viewport height for a responsive maximum height */
             overflow-x: auto; /* Add horizontal scroll bar if content overflows horizontally */
             overflow-y: auto; /* Add vertical scroll bar if content overflows vertically */
-            margin-top: 1%; /* Add margin at the top for spacing */
-            margin-left: 15%; /* Add margin to the left side */
+            margin-top: 0%; /* Add margin at the top for spacing */
+            margin-left: 13%; /* Add margin to the left side */
             box-sizing: border-box; /* Include padding and border in the element's total width and height */
         }
         
@@ -288,14 +288,6 @@
                             </li>
                         {% endif %}
                     {% endfor %}
-                    <div class="btn-support-analysis-container">
-                        <button class="btn btn-success" onclick="redirectsupport_analysis_dataURL()">Support Analysis</button>
-                    </div>
-                    <script>
-                        function redirectsupport_analysis_dataURL() {
-                            window.location.href = '/to_support_analysis/';
-                        }
-                    </script>
                 </ul>
                 <!-- User Name -->
                 <div class="d-flex align-items-center">
@@ -374,6 +366,14 @@
     </script>
 
     <div class="sidebar">
+        <div class="sidebar-item">
+            <button class="btn btn-light" onclick="redirectsupport_analysis_dataURL()">Support Analysis</button>
+        </div>
+        <script>
+            function redirectsupport_analysis_dataURL() {
+                window.location.href = '/to_support_analysis/';
+            }
+        </script>
         <form id="filter-form">
             {% csrf_token %}
             <div class="filter-options">
@@ -1137,7 +1137,7 @@
         <form id="update-support-form" class="btn-submit-support-container" method="post">
             {% csrf_token %}
             <input type="hidden" name="updated_data" id="updated-data">
-            <button id="submit-support-btn" type="button" onclick="submitSupportAndRedirect()" class="btn btn-success">Submit Support</button>
+            <button id="submit-support-btn" type="button" onclick="submitSupportAndRedirect()" class="btn btn-success">Submit</button>
             <script>
                 function submitSupportAndRedirect() {
                     submitSupport();  // Call the submitSupport function
@@ -1266,7 +1266,7 @@
             .btn-submit-support-container{
                 position: fixed;
                 bottom: 10px;
-                left: 200px;
+                right: 20px;
                 z-index: 999; /* Ensure it's above other content */
             }
             .btn-submit-strategies-container{
@@ -1295,9 +1295,9 @@
             }
             .btn-new-support-container{
                 position: fixed;
-                bottom: 20px;
-                right: 20px;
-                z-index: 999; /* Ensure it's above other content */
+                top: 85px;
+                right: 10px;
+                z-index: 999;    /* Ensure it's above other content */
             }
             .btn-new-strategies-container{
                 position: fixed;
