--- a/templates/support_analysis.html
+++ b/templates/support_analysis.html
@@ -24,7 +24,7 @@
             .sidebar {
                 margin: 0;
                 padding: 0;
-                width: 150px;
+                width: 200px;
                 background-color: lightwhite;
                 position: fixed;
                 height: 90%;
@@ -298,7 +298,236 @@
                 </div>
             </div>
         </nav>
+        <div class="sidebar">
+            <div class="sidebar-item">
+                <button class="btn btn-light" onclick="redirectsupport_tableURL()">Support Table</button>
+            </div>
+            <script>
+                function redirectsupport_tableURL() {
+                    window.location.href = '/support/';
+                }
+            </script>
+            <form id="filter-form">
+                {% csrf_token %}
+                <div class="filter-options">
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                            <a href="#" class="filter-option" data-filter="customer_type" id="dropdownToggle">Customer Type</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Choose" name="Customer Type" data-field="customer_type" class="filter-checkbox" value="Choose" checked>
+                                    <label for="Choose">Choose</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Build" name="Customer Type" data-field="customer_type" class="filter-checkbox" value="Build" checked>
+                                    <label for="Build">Build</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">        
+                            <a href="#" class="filter-option" data-filter="priority" id="dropdownToggle">Priority</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Low" name="Priority" data-field="priority" class="filter-checkbox" value="Low" checked>
+                                    <label for="Low">Low</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Medium" name="Priority" data-field="priority" class="filter-checkbox" value="Medium" checked>
+                                    <label for="Medium">Medium</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="High" name="Priority" data-field="priority" class="filter-checkbox" value="High" checked>
+                                    <label for="High">High</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">        
+                            <a href="#" class="filter-option" data-filter="issue" id="dropdownToggle">Issue</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Strategy Development" name="Issue" data-field="issue" class="filter-checkbox" value="Strategy Development" checked>
+                                    <label for="Strategy Development">Strategy Development</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Live Trading and RMS" name="Issue" data-field="issue" class="filter-checkbox" value="Live Trading and RMS" checked>
+                                    <label for="Live Trading and RMS">Live Trading and RMS</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Package and Funds" name="Issue" data-field="issue" class="filter-checkbox" value="Package and Funds" checked>
+                                    <label for="Package and Funds">Package and Funds</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Front End Issues" name="Issue" data-field="issue" class="filter-checkbox" value="Front End Issues" checked>
+                                    <label for="Front End Issues">Front End Issues</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="General Info" name="Issue" data-field="issue" class="filter-checkbox" value="General Info" checked>
+                                    <label for="General Info">General Info</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Hold" name="Issue" data-field="issue" class="filter-checkbox" value="Hold" checked>
+                                    <label for="Hold">Hold</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Resolved" name="Issue" data-field="issue" class="filter-checkbox" value="Resolved" checked>
+                                    <label for="Resolved">Resolved</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">        
+                            <a href="#" class="filter-option" data-filter="status" id="dropdownToggle">Status</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Open" name="Status" data-field="status" class="filter-checkbox" value="Open" checked>
+                                    <label for="Open">Open</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="In Progress" name="Status" data-field="status" class="filter-checkbox" value="In Progress" checked>
+                                    <label for="In Progress">In Progress</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Hold" name="Status" data-field="status" class="filter-checkbox" value="Hold" checked>
+                                    <label for="Hold">Hold</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Resolved" name="Status" data-field="status" class="filter-checkbox" value="Resolved" checked>
+                                    <label for="Resolved">Resolved</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">        
+                            <a href="#" class="filter-option" data-filter="division_assigned_to" id="dropdownToggle">Division Assigned To</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Tech" name="Division Assigned To" data-field="division_assigned_to" class="filter-checkbox" value="Tech" checked>
+                                    <label for="Tech">Tech</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Sales" name="Division Assigned To" data-field="division_assigned_to" class="filter-checkbox" value="Sales" checked>
+                                    <label for="Sales">Sales</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Strategy" name="Division Assigned To" data-field="division_assigned_to" class="filter-checkbox" value="Strategy" checked>
+                                    <label for="Strategy">Strategy</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Support" name="Division Assigned To" data-field="division_assigned_to" class="filter-checkbox" value="Support" checked>
+                                    <label for="Support">Support</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="RMS" name="Division Assigned To" data-field="division_assigned_to" class="filter-checkbox" value="RMS" checked>
+                                    <label for="RMS">RMS</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Build" name="Division Assigned To" data-field="division_assigned_to" class="filter-checkbox" value="Build" checked>
+                                    <label for="Build">Build</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">        
+                            <a href="#" class="filter-option" data-filter="support_employee" id="dropdownToggle">Support Employee</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                {% for employee_id, employee_name in unique_support_employees %}
+                                    <div>
+                                        <input type="checkbox" id="employee{{ employee_id }}" name="Support Employee" data-field="support_employee" class="filter-checkbox" value="{{ employee_name }}" checked>
+                                        <label for="employee{{ employee_id }}">{{ employee_name }}</label>
+                                    </div>
+                                {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item"> 
+                            <a href="#" class="filter-option" data-filter="division_employee" id="dropdownToggle">Division Employee</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                {% for employee_id, employee_name in unique_division_employees %}
+                                    <div>
+                                        <input type="checkbox" id="employee{{ employee_id }}" name="Division Employee" data-field="division_employee" class="filter-checkbox" value="{{ employee_name }}" checked>
+                                        <label for="employee{{ employee_id }}">{{ employee_name }}</label>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">   
+                            <a href="#" class="filter-option" data-filter="branch_id" id="dropdownToggle">Branch ID</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                {% for branch_id, branch_name in unique_branch_ids %}
+                                    <div>
+                                        <input type="checkbox" id="branch{{ branch_id }}" name="Branch ID" data-field="branch_id" class="filter-checkbox" value="{{ branch_id }}" checked>
+                                        <label for="branch{{ branch_id }}">{{ branch_name }}</label>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item"> 
+                            <a href="#" class="filter-option" data-filter="broker_name" id="dropdownToggle">Broker Name</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                {% for broker_id, broker_name in unique_broker_names %}
+                                    <div>
+                                        <input type="checkbox" id="broker{{ broker_id }}" name="Broker Name" data-field="broker_name" class="filter-checkbox" value="{{ broker_name }}" checked>
+                                        <label for="broker{{ broker_id }}">{{ broker_name }}</label>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>           
+                </div>
+            </form>
+        </div>
     </header>
+    <style>
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+    
+        .dropdown-content div {
+            padding: 12px 16px;
+        }
+    
+        .dropdown-content div:hover {
+            background-color: #f1f1f1;
+        }
+    </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var dropdowns = document.querySelectorAll('.dropdown');
+            dropdowns.forEach(function(dropdown) {
+                var toggle = dropdown.querySelector('.filter-option');
+                var menu = dropdown.querySelector('.dropdown-content');
+    
+                toggle.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+                });
+    
+                document.addEventListener('click', function(event) {
+                    if (!dropdown.contains(event.target)) {
+                        menu.style.display = 'none';
+                    }
+                });
+            });
+        });
+    </script>
     <form class="start_end_date">
         <label for="start_date">Start Date:</label>
         <input type="date" id="start_date" name="start_date" value="{{ start_date }}"><br><br>
@@ -342,7 +571,7 @@
             </div>
         </div>
     </div>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
