--- a/templates/tech_task_analysis.html
+++ b/templates/tech_task_analysis.html
@@ -24,7 +24,7 @@
             .sidebar {
                 margin: 0;
                 padding: 0;
-                width: 150px;
+                width: 200px;
                 background-color: lightwhite;
                 position: fixed;
                 height: 90%;
@@ -56,16 +56,16 @@
                 background-color: #5b72e3bf;
                 color: white;
             }
-            {% comment %} .sidebar::after {
+            .sidebar::after {
                 content: "";
                 position: absolute;
                 bottom: 0;
                 left: 0;
                 width: 100%;
                 height: 150px; /* Adjust the height as needed */
-                background-color: #2679c2bf; /* Set the color to blue */
+                {% comment %} background-color: #2679c2bf; /* Set the color to blue */ {% endcomment %}
                 border-radius: 0 0 10px 0; /* Match the bottom-right corner of the navbar */
-            } {% endcomment %}
+            }
             
     
             div.content {
@@ -298,7 +298,159 @@
                 </div>
             </div>
         </nav>
+        <div class="sidebar">
+            <div class="sidebar-item">
+                <button class="btn btn-light" onclick="redirecttech_task_tableURL()">Tech Task Table</button>
+            </div>
+            <script>
+                function redirecttech_task_tableURL() {
+                    window.location.href = '/tech_task/';
+                }
+            </script>
+            <form id="filter-form">
+                {% csrf_token %}
+                <div class="filter-options">
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                            <a href="#" class="filter-option" data-filter="nature" id="dropdownToggle">Nature</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Core Change" name="Nature" data-field="nature" class="filter-checkbox" value="Core Change" checked>
+                                    <label for="Core Change">Core Change</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Strategy Change" name="Nature" data-field="nature" class="filter-checkbox" value="Strategy Change" checked>
+                                    <label for="Strategy Change">Strategy Change</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="None Core Request" name="Nature" data-field="nature" class="filter-checkbox" value="None Core Request" checked>
+                                    <label for="None Core Request">None Core Request</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Broker Integration" name="Nature" data-field="nature" class="filter-checkbox" value="Broker Integration" checked>
+                                    <label for="Broker Integration">Broker Integration</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Operations" name="Nature" data-field="nature" class="filter-checkbox" value="Operations" checked>
+                                    <label for="Operations">Operations</label>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>  
+                    <div class="dropdown">
+                        <div class="sidebar-item">      
+                            <a href="#" class="filter-option" data-filter="task_status" id="dropdownToggle">Task Status</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Pending Development" name="Task Status" data-field="task_status" class="filter-checkbox" value="Pending Development" checked>
+                                    <label for="Pending Development">Pending Development</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Under Development" name="Task Status" data-field="task_status" class="filter-checkbox" value="Under Development" checked>
+                                    <label for="Under Development">Under Development</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Under Testing" name="Task Status" data-field="task_status" class="filter-checkbox" value="Under Testing" checked>
+                                    <label for="Under Testing">Under Testing</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Bugs Reported" name="Task Status" data-field="task_status" class="filter-checkbox" value="Bugs Reported" checked>
+                                    <label for="Bugs Reported">Bugs Reported</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Delivered or Closed" name="Task Status" data-field="task_status" class="filter-checkbox" value="Delivered or Closed" checked>
+                                    <label for="Delivered or Closed">Delivered or Closed</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="In Progress" name="Task Status" data-field="task_status" class="filter-checkbox" value="In Progress" checked>
+                                    <label for="In Progress">In Progress</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="On Hold" name="Task Status" data-field="task_status" class="filter-checkbox" value="On Hold" checked>
+                                    <label for="On Hold">On Hold</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Open" name="Task Status" data-field="task_status" class="filter-checkbox" value="Open" checked>
+                                    <label for="Open">Open</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                            <a href="#" class="filter-option" data-filter="priority" id="dropdownToggle">Priority</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                <div>
+                                    <input type="checkbox" id="Low" name="Priority" data-field="priority" class="filter-checkbox" value="Low" checked>
+                                    <label for="Low">Low</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="Medium" name="Priority" data-field="priority" class="filter-checkbox" value="Medium" checked>
+                                    <label for="Medium">Medium</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="High" name="Priority" data-field="priority" class="filter-checkbox" value="High" checked>
+                                    <label for="High">High</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <div class="sidebar-item">
+                            <a href="#" class="filter-option" data-filter="employee_id" id="dropdownToggle">Employee ID</a>
+                            <div id="dropdownMenu" class="dropdown-content">
+                                {% for employee_id, employee_name in unique_employee_ids %}
+                                    <div>
+                                        <input type="checkbox" id="employee{{ employee_id }}" name="Employee ID" data-field="employee_id" class="filter-checkbox" value="{{ employee_name }}" checked>
+                                        <label for="employee{{ employee_id }}">{{ employee_name }}</label>
+                                    </div>
+                                {% endfor %}
+                                </div> 
+                            </div> 
+                        </div> 
+                    </div>            
+                </div>
+            </form>
+        </div>
     </header>
+    <style>
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+    
+        .dropdown-content div {
+            padding: 12px 16px;
+        }
+    
+        .dropdown-content div:hover {
+            background-color: #f1f1f1;
+        }
+    </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var dropdowns = document.querySelectorAll('.dropdown');
+            dropdowns.forEach(function(dropdown) {
+                var toggle = dropdown.querySelector('.filter-option');
+                var menu = dropdown.querySelector('.dropdown-content');
+    
+                toggle.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+                });
+    
+                document.addEventListener('click', function(event) {
+                    if (!dropdown.contains(event.target)) {
+                        menu.style.display = 'none';
+                    }
+                });
+            });
+        });
+    </script>
     <form class="start_end_date">
         <label for="start_date">Start Date:</label>
         <input type="date" id="start_date" name="start_date" value="{{ start_date }}"><br><br>
@@ -332,7 +484,7 @@
             </div>
         </div>
     </div>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
